--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <p><i class="fas fa-phone"></i> +48 792 828 884</p>
                     <p><i class="fas fa-envelope"></i> creativefront.projects@gmail.com</p>
                 </div>
-               <form class="contact-form" action="https://formspree.io/f/mgvwd1vj" method="POST">
+               <form class="contact-form" action="https://formspree.io/f/xjkbzgjk" method="POST">
     <input type="text" name="name" placeholder="Imię i nazwisko" required>
     <input type="email" name="email" placeholder="E-mail" required>
     <select name="service" required>
